--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,17 @@
         <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
+
+      <div class="header-links">
+        <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="#summary" data-scroll>Summary</a>
+        <a class="link" href="#projects" data-scroll>Projects</a>
+        <a class="link" href="#contact" data-scroll>Contact</a>
+      </div>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:{{site.email}}"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Github" target="_blank" href="https://www.github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-      </div>
-      <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
-        <a class="link" href="#projects" data-scroll>Projects</a>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/steliosgiannelos1995"><i class="icon fa fa-building" aria-hidden="true"></i></a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
