--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </h1>
 
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="#about" data-scroll>About Meeee</a>
         <a class="link" href="#summary" data-scroll>Summary</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
         <a class="link" href="#contact" data-scroll>Contact</a>
