--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
       <i class="devicon-sass-original colored"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
-    </div> -->
+    </div> 
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
@@ -25,6 +25,7 @@
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+        Vinyl XOXO lumbersexual</p>-->
+      <h2>Site is under construction!</h2>
     </div>
 </div>
