Under construction with particles

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,6 +26,7 @@
       <i class="devicon-atom-original-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>-->
+    <div class="tech">
       <h2>Site is under construction!</h2>
     </div>
 </div>
